--- a/src/App.css
+++ b/src/App.css
@@ -41,10 +41,12 @@ body {
 
 .correctAnswer {
   border: 3px solid rgb(6, 240, 15);
+  background-color: rgb(6, 240, 15);
 }
 
 .wrongAnswer {
   border: 3px solid red;
+  background-color: red;
 }
 
 .App-link {
